--- a/practica5_clases/package.json
+++ b/practica5_clases/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "theory-examples",
+  "name": "ejercicio-clases-interfaces-objetos",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
